--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".Registro_A"
             android:label="@string/title_activity_registro"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Registro_B"></activity>
+        <activity android:name=".Registro_B" />
+        <activity android:name=".Dashboard"></activity>
     </application>
 
 </manifest>
