--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:label="@string/title_activity_registro"
             android:theme="@style/AppTheme" />
         <activity android:name=".Registro_B" />
-        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".Dashboard" />
+        <activity android:name=".EditProfile"></activity>
     </application>
 
 </manifest>
