--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".Registro_B" />
         <activity android:name=".Dashboard" />
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".EditProfile" />
+        <activity android:name=".NewReport"></activity>
     </application>
 
 </manifest>
