--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".Registro_B" />
         <activity android:name=".Dashboard" />
         <activity android:name=".EditProfile" />
-        <activity android:name=".NewReport"></activity>
+        <activity android:name=".NewReport" />
+        <activity android:name=".LineItem"></activity>
     </application>
 
 </manifest>
