--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,26 +19,32 @@
         <activity
             android:name=".Registro_A"
             android:label="@string/title_activity_registro"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/ActionBar" />
         <activity
             android:name=".Registro_B"
             android:label="@string/title_activity_registro"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/ActionBar"/>
         <activity
             android:name=".Dashboard"
             android:label="@string/Dashboard"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/Dashboard"/>
         <activity
             android:name=".EditProfile"
             android:label="@string/editprofile"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/ActionBar"/>
         <activity
             android:name=".NewReport"
             android:label="@string/newreport"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/ActionBar"/>
         <activity
             android:name=".LineItem"
             android:label="@string/lineitem"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/ActionBar"></activity>
     </application>
 
